[gd_scene load_steps=2 format=3 uid="uid://bve63ian72pwv"]

[ext_resource type="Script" path="res://modules/weapons/guns/gun.gd" id="1_gncqk"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_gncqk")

[node name="Markers cotainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Marker2D" type="Marker2D" parent="Markers cotainer"]

[node name="FireTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
